[project]
name = "pygitmate"
version = "0.1.2"
description = "A CLI tool to simplify Git workflows"
readme = "README.md"
authors = [{ name = "Sarvesh Kumar Dwivedi", email = "heysarvesh@pm.me" }]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "rich>=13.9.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = ["git", "cli", "developer-tools", "agile"]


[project.scripts]
gmate = "pygitmate.main:cli"
pygitmate = "pygitmate.main:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
include = ["main.py"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
